# image2ico

./: .gitignore  Jenkinsfile  LICENSE.txt  README.md  cli.py  gui.py  image2ico.code-workspace  image2ico.xcf  pyproject.toml  setup.py
image2ico/: __main__.py
image2ico/cli/: __init__.py  cli_arguments.py
image2ico/converter/: __init__.py
image2ico/gui/: __main__.py  app.py  cli_arguments.py  commands.py  components.py  folder_opener.py  variables.py
tests/: test_image2ico.py
