[tool.poetry]
name = "image2ico"
version = "0.1.0"
description = "Image to icon converting tool"
authors = ["Tomas Zikmund <tommekster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typed-argument-parser = "^1.7.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
autopep8 = "^1.7.0"

[tool.poetry.scripts]
image2ico = "image2ico.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
